style.css
/* ... */
/* Active */
.main-navigation .current-menu-item > a,
.main-navigation .current-menu-parent > a,
.main-navigation .current-menu-ancestor > a,
.main-navigation .current_page_item > a,
.main-navigation .current_page_parent > a,
.main-navigation .current_page_ancestor > a {
	color: #00a69c;
}

/* Hover */
.main-navigation .nav-menu > li > a:hover {
	color: #fff;
	background: #00a69c;
}

/* Hover with submenu */
.main-navigation .nav-menu > .menu-item-has-children:hover > a {
	color: #222;
	background: #fff;
}

/* Submenu hover */
.main-navigation li.menu-item-has-children:hover a {
	background: #fff;
}

.main-navigation li.menu-item-has-children:hover a:hover {
	background: #f4f4f4;
}

/* Nested menu */
.main-navigation ul ul {
	background: #fff;
	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
	float: left;
	position: absolute;
	margin: 0;
	top: 2.4375em;
	left: -999em;
	z-index: 99999;
}

.main-navigation ul ul ul {
	left: -999em;
	top: 0;
}

.main-navigation ul ul a {
	color: #222;
	width: 200px;
}

.main-navigation ul li:hover > ul {
	left: auto;
}

.main-navigation ul ul li:hover > ul {
	left: 100%;
}

.main-navigation ul ul li.page_item_has_children:hover > a {
	background: #f4f4f4;
}

/* Small menu */
.menu-toggle {
	display: none;
}

.site-main .comment-navigation,
.site-main .paging-navigation,
.site-main .post-navigation {
	margin: 0 0 1.5em;
	overflow: hidden;
}

.comment-navigation .nav-previous,
.paging-navigation .nav-previous,
.post-navigation .nav-previous {
	float: left;
	width: 50%;
}

.comment-navigation .nav-next,
.paging-navigation .nav-next,
.post-navigation .nav-next {
	float: right;
	text-align: right;
	width: 50%;
}

@media screen and (max-width: 600px) {
	.menu-toggle,
	.main-navigation.toggled .nav-menu {
		display: block;
	}

	.main-navigation ul {
		display: none;
	}
}


/*--------------------------------------------------------------
6.0 Accessibility
--------------------------------------------------------------*/
/* Text meant only for screen readers */
.screen-reader-text {
	clip: rect(1px, 1px, 1px, 1px);
	position: absolute !important;
	height: 1px;
	width: 1px;
	overflow: hidden;
}

.screen-reader-text:hover,
.screen-reader-text:active,
.screen-reader-text:focus {
	background-color: #f1f1f1;
	border-radius: 3px;
	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
	clip: auto !important;
	color: #21759b;
	display: block;
	font-size: 14px;
	font-size: 1.4rem;
	font-weight: bold;
	height: auto;
	left: 5px;
	line-height: normal;
	padding: 15px 23px 14px;
	text-decoration: none;
	top: 5px;
	width: auto;
	z-index: 100000; /* Above WP toolbar */
}

/*--------------------------------------------------------------
7.0 Alignments
--------------------------------------------------------------*/
.alignleft {
	display: inline;
	float: left;
	margin-right: 1.5em;
}

.alignright {
	display: inline;
	float: right;
	margin-left: 1.5em;
}

.aligncenter {
	clear: both;
	display: block;
	margin: 0 auto;
}

/*--------------------------------------------------------------
8.0 Clearings
--------------------------------------------------------------*/
.clear:before,
.clear:after,
.entry-content:before,
.entry-content:after,
.comment-body:before,
.comment-body:after,
.comment-content:before,
.comment-content:after,
.site-header:before,
.site-header:after,
.site-branding:before,
.site-branding:after,
.site-content:before,
.site-content:after,
.site-footer:before,
.site-footer:after {
	content: "";
	display: table;
}

.clear:after,
.entry-content:after,
.comment-body:after,
.comment-content:after,
.site-header:after,
.site-branding:after,
.site-content:after,
.site-footer:after {
	clear: both;
}

/*--------------------------------------------------------------
9.0 Widgets
--------------------------------------------------------------*/
.widget {
	margin: 0 0 1.5em;
	font-size: 14px;
}

/* Make sure input and select elements fit in widgets */
.widget input,
.widget select {
	width: 100%;
	box-sizing: border-box;
	padding: 0.5em 1em;
}

.widget-title {
	font-size: 24px;
}

.widget ul {
	margin-left: 1.5em;
}

.widget li:last-child {
	border-bottom: none;
}

/* Custom lists */
.widget_recent_entries ul,
.widget_pages ul,
.widget_categories ul,
.widget_archive ul,
.widget_recent_comments ul,
.widget_nav_menu ul,
.widget_links ul,
.widget_meta ul {
	margin-left: 0;
}

.widget_recent_entries ul li,
.widget_pages ul li,
.widget_categories ul li,
.widget_archive ul li,
.widget_recent_comments ul li,
.widget_nav_menu ul li,
.widget_links ul li,
.widget_meta ul li {
	list-style: none;
	margin-bottom: 0.6em;
}

.widget_recent_entries ul li:before,
.widget_pages ul li:before,
.widget_categories ul li:before,
.widget_archive ul li:before,
.widget_recent_comments ul li:before,
.widget_nav_menu ul li:before,
.widget_links ul li:before,
.widget_meta ul li:before {
	font-family: "dashicons";
	font-size: 1.25em;
	margin-right: 0.3em;
	margin-left: -0.5px;
	line-height: 1;
	display: inline-block;
	color: #222;
	opacity: 0.25;
	content: "\f345";
	float: left;
}

.widget_recent_entries ul li:before,
.widget_pages ul li:before {
	content: "\f105";
}

.widget_categories ul li:before {
	content: "\f318";
}

.widget_archive ul li:before {
	content: "\f480";
}

.widget_recent_comments ul li:before {
	content: "\f101";
}

.widget_links ul li:before {
	content: "\f504";
}

.widget_recent_entries ul li a,
.widget_pages ul li a,
.widget_categories ul li a,
.widget_archive ul li a,
.widget_recent_comments ul li a,
.widget_nav_menu ul li a,
.widget_links ul li a,
.widget_meta ul li a {
	color: #a3a3a3;
}

.widget_recent_entries ul li a:hover,
.widget_pages ul li a:hover,
.widget_categories ul li a:hover,
.widget_archive ul li a:hover,
.widget_recent_comments ul li a:hover,
.widget_nav_menu ul li a:hover,
.widget_links ul li a:hover,
.widget_meta ul li a:hover {
	color: #00a69c;
}

/* Search widget */
.widget_search .search-submit {
	display: none;
}
/* ... */

